# Win-AMD-Qwen3-ASR

./: .gitignore  README.md  install.bat  pyproject.toml  run.bat
examples/: example_qwen3_asr_transformers.py  example_qwen3_forced_aligner.py
finetuning/: README.md  qwen3_asr_sft.py
qwen_asr/: __init__.py  __main__.py
qwen_asr/cli/: demo.py  demo_streaming.py  serve.py
qwen_asr/core/transformers_backend/: modeling_qwen3_asr.py
qwen_asr/inference/: qwen3_asr.py  qwen3_forced_aligner.py  utils.py
